# RDBM-to-Graph-Testing

./: .gitignore
database_access/: .gitignore  mypy.ini  pyproject.toml
database_access/adapters/: people_doc_builder.py
database_access/few_shot_examples/example/: ee_few_shot_examples.txt  oie_few_shot_examples.txt  oie_few_shot_refine_examples.txt  sd_few_shot_examples.txt
database_access/mock_dataset/: data_points.parquet  events.parquet  features_schema.parquet  mutual_fits.parquet  orgs.parquet  people_data_points.parquet  people_event_sessions.parquet  people_events.parquet  people_features_data_points.parquet  people_groups.parquet  people_orgs.parquet  profile_update_log.parquet  social_connections.parquet  vibe_invitation_records.parquet
database_access/prompt_templates/: ee_template.txt  oie_r_template.txt  oie_template.txt  sc_template.txt  sd_template.txt
database_access/runners/: run_people_edc.py
database_access/schemas/: people_schema.csv
database_access/src/: __init__.py  kg_build_v1.py  kg_build_v2.py  main.py  make_mock_dataset.py  make_mock_dataset_v2.py
database_access/src/mock_dataset/: import_batch_requests.parquet  people.parquet  people_features.parquet  personal_contacts.parquet
git_scripts/: commit-push-ascend-style.sh
